--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@ body {
 			game.load.audio('jump','audio/jump.mp3');
 			game.load.audio('coinsc','audio/coin.mp3');
 			game.load.audio('death','audio/death.mp3');
-			game.load.image('pic','assets/coin.png');
+			game.load.image('pic','assets/coin1.png');
 			game.load.image('live','assets/mariolive.png')
 			//  We need this because the assets are on github pages
 			//  Remove the next 2 lines if running locally
-			//this.load.baseURL = 'https://ioniodi.github.io/Super-Mario/';
-			//this.load.crossOrigin = 'anonymous';
+			this.load.baseURL = 'https://dionisiskon.github.io/Super-Mario/';
+			this.load.crossOrigin = 'anonymous';
 
 			this.load.spritesheet('tiles', 'assets/super_mario_tiles.png', 16,
 					16);
