--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ body {
 				if (lives==0){
 				setTimeout(function(){
 				alert("You have lost all your lives.Try again?");
-				game.state.restart();
+				location.reload();
 				}, 4000);}
 			}
 		}
