--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {
 			this.load.spritesheet('wario', 'assets/wario.png', 16, 16);
 			this.load.spritesheet('coin', 'assets/cointest1.png', 16, 16);
 
-			this.load.tilemap('level', 'assets/super_mario_map.json', null,
+			this.load.tilemap('level', 'assets/super_mario_map1.json', null,
 					Phaser.Tilemap.TILED_JSON);
 		}
 		var music;
