--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ body {
 			game.load.audio('jump','audio/jump.mp3');
 			game.load.audio('coinsc','audio/coin.mp3');
 			game.load.audio('death','audio/death.mp3');
+			game.load.audio('gameover','audio/gameover.mp3);
 			game.load.image('pic','assets/coin1.png');
 			game.load.image('live','assets/mariolive.png');
 			//  We need this because the assets are on github pages
@@ -52,6 +53,7 @@ body {
 		var limage;
 		var lives=3;
 		var lcounter;
+		var gover;
 
 		function create() {
 
@@ -183,12 +185,11 @@ body {
 				player.frame = 6;
 				player.body.enable = false;
 				player.animations.stop();
-				music.loop=false;
 				music.stop();
-				deaths=game.add.audio('death');
-				deaths.play();
 				if(lives>1){
 					setTimeout(function(){
+					deaths=game.add.audio('death');
+					deaths.play();
 					score=0;
 					cvalue=0;
 					lives-=1;
@@ -196,6 +197,8 @@ body {
     		   		 }, 4000);
     					} else {
 				setTimeout(function(){
+					gover=game.add.audio('gameover');
+					gover.play();
 				alert("You have lost all your lives.Try again?");
 				location.reload();
 				}, 4000);}
