--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {
 			game.load.audio('jump','audio/jump.mp3');
 			game.load.audio('coinsc','audio/coin.mp3');
 			game.load.audio('death','audio/death.mp3');
-			game.load.audio('gameovers','audio/gameover.mp3);
+			game.load.audio('gameovers','audio/gameover.mp3');
 			game.load.image('pic','assets/coin1.png');
 			game.load.image('live','assets/mariolive.png');
 			//  We need this because the assets are on github pages
