--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <style>
 body {
 	font-family: 'Press Start 2P', cursive;
+	font-weight: normal;
+   	font-style: normal;
 	margin: 0;
 	padding: 0;
 	background-color: #000;
