Small changes regarding alerts

--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@ body {
 			music=game.add.audio('maintheme');
 			music.loop=true;
 			music.play();
+			if(lives==3){
 			alert("Kill every goomba and get every coin and you win!");
+			}
 		}
 		var jumps;
 		var stomps;
