--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@ body {
 					goomba.kill();
 				});
 			} else {
-            	deadsound.play();
+            			deadsound.play();
+				background.stop();
 				player.frame = 6;
 				player.body.enable = false;
 				player.animations.stop();
