--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ body {
 				});
 			} else {
             			deadsound.play();
-				background.stop();
+				backsound.stop();
 				player.frame = 6;
 				player.body.enable = false;
 				player.animations.stop();
