--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
 			this.load.spritesheet('tiles', 'assets/super_mario_tiles.png', 16,
 					16);
 			this.load.spritesheet('goomba', 'assets/goomba.png', 16, 16);
-			this.load.spritesheet('luigi', 'assets/luigi.png', 16, 16);
+			this.load.spritesheet('megaman', 'assets/megaman4.png', 16, 16);
 			this.load.spritesheet('coin', 'assets/cointest1.png', 16, 16);
 
 			this.load.tilemap('level', 'assets/super_mario_map1.json', null,
@@ -97,7 +97,7 @@ body {
 			goombas.setAll('body.velocity.x', -20);
 			goombas.setAll('body.gravity.y', 500);
 
-			player = game.add.sprite(16, game.world.height - 48, 'luigi');
+			player = game.add.sprite(16, game.world.height - 48, 'megaman');
 			game.physics.arcade.enable(player);
 			player.body.gravity.y = 370;
 			player.body.collideWorldBounds = true;
