--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@ body {
 			this.load.audio('clearc','audio/courseclear.mp3');
 			//  We need this because the assets are on github pages
 			//  Remove the next 2 lines if running locally
-			this.load.baseURL = 'https://dionisiskon.github.io/Super-Mario/';
-			this.load.crossOrigin = 'anonymous';
+			//this.load.baseURL = 'https://dionisiskon.github.io/Super-Mario/';
+			//this.load.crossOrigin = 'anonymous';
 
 			this.load.spritesheet('tiles', 'assets/super_mario_tiles.png', 16,
 					16);
 			this.load.spritesheet('goomba', 'assets/goomba.png', 16, 16);
-			this.load.spritesheet('megaman', 'assets/megaman4.png', 16, 16);
+			this.load.spritesheet('mario', 'assets/remario1.png', 14.3, 14.5);
 			this.load.spritesheet('coin', 'assets/cointest1.png', 16, 16);
 
 			this.load.tilemap('level', 'assets/super_mario_map1.json', null,
@@ -90,19 +90,18 @@ body {
 			goombas = game.add.group();
 			goombas.enableBody = true;
 			map.createFromTiles(1, null, 'goomba', 'stuff', goombas);
-			goombas.callAll('animations.add', 'animations', 'walk', [ 0, 1 ],
-					2, true);
+			goombas.callAll('animations.add', 'animations', 'walk', [ 0, 1 ],2, true);
 			goombas.callAll('animations.play', 'animations', 'walk');
 			goombas.setAll('body.bounce.x', 1);
 			goombas.setAll('body.velocity.x', -20);
 			goombas.setAll('body.gravity.y', 500);
 
-			player = game.add.sprite(16, game.world.height - 48, 'megaman');
+			player = game.add.sprite(16, game.world.height - 48, 'mario');
 			game.physics.arcade.enable(player);
 			player.body.gravity.y = 370;
 			player.body.collideWorldBounds = true;
-			player.animations.add('walkRight', [ 1, 2, 3 ], 10, true);
-			player.animations.add('walkLeft', [ 8, 9, 10 ], 10, true);
+			player.animations.add('walkRight', [1, 2 ], 10, true);
+			player.animations.add('walkLeft', [ 10, 11 ], 10, true);
 			player.goesRight = true;
 			game.camera.follow(player);
 			scoreText=game.add.text(16,8,'WARIO\n'+score,{font:'15px Press Start 2P' ,fontSize: '8px', fill: 'white'} );
@@ -138,7 +137,6 @@ body {
 			game.physics.arcade.collide(goombas, layer);
 			game.physics.arcade.overlap(player, goombas, goombaOverlap);
 			game.physics.arcade.overlap(player, coins, coinOverlap);
-
 			if (player.body.enable) {
 				player.body.velocity.x = 0;
 				if (cursors.left.isDown) {
@@ -154,7 +152,7 @@ body {
 					if (player.goesRight)
 						player.frame = 0;
 					else
-						player.frame = 7;
+						player.frame = 9;
 				} 
 
 				if (cursors.up.isDown && player.body.onFloor()) {
@@ -166,9 +164,9 @@ body {
 
 				if (player.body.velocity.y != 0) {
 					if (player.goesRight)
-						player.frame = 5;
+						player.frame = 4;
 					else
-						player.frame = 12;
+						player.frame = 13;
 				}
 			}
 		}
@@ -209,7 +207,7 @@ body {
 				});
 									}
 			 else {
-				player.frame = 6;
+				player.frame = 14;
 				player.body.enable = false;
 				player.animations.stop();
 				music.stop();
