--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@ body {
 			this.load.audio('clearc','audio/courseclear.mp3');
 			//  We need this because the assets are on github pages
 			//  Remove the next 2 lines if running locally
-			this.load.baseURL = 'https://dionisiskon.github.io/Super-Mario/';
-			this.load.crossOrigin = 'anonymous';
+			//this.load.baseURL = 'https://dionisiskon.github.io/Super-Mario/';
+			//this.load.crossOrigin = 'anonymous';
 
-			this.load.spritesheet('tiles', 'assets/super_mario_tiles.png', 16,
+			this.load.spritesheet('tiles', 'assets/newtiles.png', 16,
 					16);
 			this.load.spritesheet('goomba', 'assets/goomba.png', 16, 16);
 			this.load.spritesheet('mario', 'assets/remario1.png', 14.3, 14.5);
 			this.load.spritesheet('coin', 'assets/cointest1.png', 16, 16);
+			this.load.spritesheet('pyroguy','assets/pyroguy.png',15,15);
 
-			this.load.tilemap('level', 'assets/super_mario_map1.json', null,
+			this.load.tilemap('level', 'assets/2016178.json', null,
 					Phaser.Tilemap.TILED_JSON);
 		}
 		var music;
@@ -69,7 +70,7 @@ body {
 			game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
 			game.physics.startSystem(Phaser.Physics.ARCADE);
 
-			game.stage.backgroundColor = '#5c94fc';
+			game.stage.backgroundColor = '#0000';
 
 			map = game.add.tilemap('level');
 			map.addTilesetImage('tiles', 'tiles');
@@ -95,6 +96,16 @@ body {
 			goombas.setAll('body.bounce.x', 1);
 			goombas.setAll('body.velocity.x', -20);
 			goombas.setAll('body.gravity.y', 500);
+
+			pyroguys=game.add.group(); 
+			pyroguys.enableBody=true;
+			map.createFromTiles(22,null,'pyroguy','stuff',pyroguys);
+			pyroguys.callAll('animations.add', 'animations', 'walk', [ 5,6,7,8,9 ],2, true);
+			pyroguys.callAll('animations.play', 'animations', 'walk');
+			pyroguys.setAll('body.bounce.x', 1);
+			pyroguys.setAll('body.velocity.x', -30);
+			pyroguys.setAll('body.gravity.y', 500);
+
 
 			player = game.add.sprite(16, game.world.height - 48, 'mario');
 			game.physics.arcade.enable(player);
@@ -136,6 +147,8 @@ body {
 			game.physics.arcade.collide(player, layer);
 			game.physics.arcade.collide(goombas, layer);
 			game.physics.arcade.overlap(player, goombas, goombaOverlap);
+			game.physics.arcade.collide(pyroguys, layer);
+			game.physics.arcade.overlap(player, pyroguys, pyroguyOverlap);
 			game.physics.arcade.overlap(player, coins, coinOverlap);
 			if (player.body.enable) {
 				player.body.velocity.x = 0;
@@ -189,7 +202,41 @@ body {
     				}
 			coin.kill();
 		}
-
+		function pyroguyOverlap(player, pyroguy) {		
+			if (player.body.touching.down) {
+				pyroguy.animations.stop();
+				pyroguy.frame = 2;
+				pyroguy.body.enable = false;
+				player.body.velocity.y = -80;
+				stomps = game.add.audio('stomp');
+		        stomps.play();
+				game.time.events.add(Phaser.Timer.SECOND, function() {
+					pyroguy.kill();
+				});
+									}
+			 else {
+				player.frame = 14;
+				player.body.enable = false;
+				player.animations.stop();
+				music.stop();
+				deaths=game.add.audio('death');
+				deaths.play();
+				if(lives>1){
+					setTimeout(function(){
+				score=0;
+				cvalue=0;
+				lives-=1;
+				gokill=0;
+				ckill=0;
+    		    		game.state.start(game.state.current);
+    		   		 }, 4000);
+    					} else {
+				setTimeout(function(){
+				alert("You have lost all your lives.Try again?");
+				location.reload();
+				}, 4000);}
+			}
+		}
 		function goombaOverlap(player, goomba) {		
 			if (player.body.touching.down) {
 				goomba.animations.stop();
