--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
 			this.load.spritesheet('tiles', 'assets/newtiles.png', 16,
 					16);
 			this.load.spritesheet('goomba', 'assets/goomba.png', 16, 16);
-			this.load.spritesheet('mario', 'assets/remario1.png', 14.3, 14.5);
+			this.load.spritesheet('mario', 'assets/1234.png', 16, 16);
 			this.load.spritesheet('coin', 'assets/cointest1.png', 16, 16);
 			this.load.spritesheet('pyroguy','assets/shyguy11.png',17,17);
 
