--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body {
 			this.load.spritesheet('goomba', 'assets/goomba.png', 16, 16);
 			this.load.spritesheet('mario', 'assets/1234.png', 16, 16);
 			this.load.spritesheet('coin', 'assets/cointest1.png', 16, 16);
-			this.load.spritesheet('pyroguy','assets/shyguy13.png',16,16);
+			this.load.spritesheet('pyroguys','assets/shyguy13.png',16,16);
 
 			this.load.tilemap('level', 'assets/2016178.json', null,
 					Phaser.Tilemap.TILED_JSON);
@@ -104,7 +104,7 @@ body {
 
 			pyroguys=game.add.group(); 
 			pyroguys.enableBody=true;
-			map.createFromTiles(22,null,'pyroguy','stuff',pyroguys);
+			map.createFromTiles(22,null,'pyroguys','stuff',pyroguys);
 			pyroguys.callAll('animations.add', 'animations', 'walk', [ 5,6 ],4, true);
 			pyroguys.callAll('animations.play', 'animations', 'walk');
 			pyroguys.setAll('body.bounce.x', 1);
