--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
 			this.load.spritesheet('tiles', 'assets/newtiles.png', 16,
 					16);
 			this.load.spritesheet('goomba', 'assets/goomba.png', 16, 16);
-			this.load.spritesheet('mario', 'assets/1234.png', 16, 16);
+			this.load.spritesheet('mario', 'assets/supermario2.png', 16, 16);
 			this.load.spritesheet('coin', 'assets/cointest1.png', 16, 16);
 			this.load.spritesheet('pyroguys','assets/shyguy13.png',16,16);
 
@@ -118,7 +118,7 @@ body {
 			player.body.collideWorldBounds = true;
 			player.animations.add('walkRight', [1, 2 ], 10, true);
 			player.animations.add('walkLeft', [ 10, 11 ],10, true);
-			player.animations.add('tp',[4,4,4,4],4,true);
+			player.animations.add('tp',[18,18,19,19,20,20,21,21,22,22,23,23,24],10,true);
 			player.goesRight = true;
 			game.camera.follow(player);
 			scoreText=game.add.text(16,8,'WARIO\n'+score,{font:'15px Press Start 2P' ,fontSize: '8px', fill: 'white'} );
@@ -157,6 +157,8 @@ body {
 			game.physics.arcade.overlap(player, pyroguys, pyroguyOverlap);
 			game.physics.arcade.overlap(player, coins, coinOverlap);
 			game.physics.arcade.collide(player,pipes,pipesOverlap);
+			game.physics.arcade.collide(pyroguys,pipes);
+			game.physics.arcade.collide(goombas,pipes);
 			if (player.body.enable) {
 				player.body.velocity.x = 0;
 				if (cursors.left.isDown) {
