--- a/index.html
+++ b/index.html
@@ -14,41 +14,18 @@ body {
 	background-color: #000;
 }
 </style>
+<script src="splash.js"></script>
+<script src="state1.js"></script>
+<script src="preloader1.js"></script>
+<script src="options.js"></script>
 <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
 </head>
 <body>
 	<script type="text/javascript">
-		var game = new Phaser.Game(256, 240, Phaser.CANVAS, '', {
-			preload : preload,
-			create : create,
-			update : update
-		}, false, false);
-
-		function preload() {
-			this.load.audio('maintheme','audio/maintheme1.mp3');
-			this.load.audio('stomp','audio/stomp.mp3');
-			this.load.audio('jump','audio/jump.mp3');
-			this.load.audio('coinsc','audio/coin.mp3');
-			this.load.audio('death','audio/death.mp3');
-			this.load.image('pic','assets/coin1.png');
-			this.load.image('live','assets/mariolive.png');
-			this.load.image('gpic','assets/goombapic.png');
-			this.load.audio('clearc','audio/courseclear.mp3');
-			this.load.audio('tps','audio/warp.mp3');
-			//  We need this because the assets are on github pages
-			//  Remove the next 2 lines if running locally
-			this.load.baseURL = 'https://dionisiskon.github.io/Super-Mario/';
-			this.load.crossOrigin = 'anonymous';
-
-			this.load.spritesheet('tiles', 'assets/newtiles.png', 16,
-					16);
-			this.load.spritesheet('goomba', 'assets/goomba.png', 16, 16);
-			this.load.spritesheet('mario', 'assets/supermario2.png', 16, 16);
-			this.load.spritesheet('coin', 'assets/cointest1.png', 16, 16);
-			this.load.spritesheet('pyroguys','assets/shyguy13.png',16,16);
-
-			this.load.tilemap('level', 'assets/2016178.json', null,
-					Phaser.Tilemap.TILED_JSON);
+		var game = new Phaser.Game(256, 240, Phaser.AUTO, '',this, false, false);
+		function preload(){
+			//this.load.baseURL = 'https://dionisiskon.github.io/Super-Mario/';
+			//this.load.crossOrigin = 'anonymous';
 		}
 		var music;
 		var scoreText;
@@ -56,8 +33,8 @@ body {
 		var cvalue=0;
 		var cimage;
 		var limage;
-		var lives=3;
-		var lcounter;
+		var lives=3;     //variables for music,text and
+		var lcounter;     
 		var gkill;
 		var gokill=0;
 		var ckill=0;
@@ -68,139 +45,15 @@ body {
 		var deaths;
 		var score=0; 
 		var cclear;
-		var warps;
 
-		function create() {
-
-			Phaser.Canvas.setImageRenderingCrisp(game.canvas)
-			game.scale.pageAlignHorizontally = true;
-			game.scale.pageAlignVertically = true
-			game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
-			game.physics.startSystem(Phaser.Physics.ARCADE);
-
-			game.stage.backgroundColor = '#0000';
-
-			map = game.add.tilemap('level');
-			map.addTilesetImage('tiles', 'tiles');
-			map.setCollisionBetween(3, 12, true, 'solid');
-			map.setCollisionBetween(3, 12, true, 'pipes');
-
-
-
-			map.createLayer('background');
-			pipes = map.createLayer('pipes');
-			pipes.resizeWorld();
-
-			layer = map.createLayer('solid');
-			layer.resizeWorld();
-
-			coins = game.add.group();
-			coins.enableBody = true;
-			map.createFromTiles(2, null, 'coin', 'stuff', coins);
-			coins.callAll('animations.add', 'animations', 'spin',
-					[ 0, 0, 1, 2,3,4,5,6,7 ], 10, true);
-			coins.callAll('animations.play', 'animations', 'spin');
-
-			goombas = game.add.group();
-			goombas.enableBody = true;
-			map.createFromTiles(1, null, 'goomba', 'stuff', goombas);
-			goombas.callAll('animations.add', 'animations', 'walk', [ 0, 1 ],2, true);
-			goombas.callAll('animations.play', 'animations', 'walk');
-			goombas.setAll('body.bounce.x', 1);
-			goombas.setAll('body.velocity.x', -20);
-			goombas.setAll('body.gravity.y', 500);
-
-			pyroguys=game.add.group(); 
-			pyroguys.enableBody=true;
-			map.createFromTiles(22,null,'pyroguys','stuff',pyroguys);
-			pyroguys.callAll('animations.add', 'animations', 'walk', [ 5,6 ],4, true);
-			pyroguys.callAll('animations.play', 'animations', 'walk');
-			pyroguys.setAll('body.bounce.x', 1);
-			pyroguys.setAll('body.velocity.x', -30);
-			pyroguys.setAll('body.gravity.y', 500);
-
-
-			player = game.add.sprite(16, game.world.height - 48, 'mario');
-			game.physics.arcade.enable(player);
-			player.body.gravity.y = 370;
-			player.body.collideWorldBounds = true;
-			player.animations.add('walkRight', [1, 2 ], 10, true);
-			player.animations.add('walkLeft', [ 10, 11 ],10, true);
-			player.animations.add('tp',[18,18,19,19,20,20,21,21,22,22,23,23,24],10,true);
-			player.goesRight = true;
-			game.camera.follow(player);
-			scoreText=game.add.text(16,8,'WARIO\n'+score,{font:'15px Press Start 2P' ,fontSize: '8px', fill: 'white'} );
-			cimage=game.add.sprite(80,7,'pic');
-			limage=game.add.sprite(140,8,'live');
-			lcounter=game.add.text(158,13,'X'+lives,{font:'15px Press Start 2P' ,fontSize: '8px', fill: 'white'});
-			ccounter=game.add.text(98,13,'X'+cvalue,{font:'15px Press Start 2P' ,fontSize: '8px', fill: 'white'});
-			gkill=game.add.text(218,13,'X'+gokill,{font:'15px Press Start 2P' ,fontSize: '8px', fill: 'white'});
-			gimage=game.add.sprite(200,8,'gpic');
-			gimage.fixedToCamera=true;
-			gkill.fixedToCamera=true;
-			cimage.fixedToCamera=true;
-			scoreText.fixedToCamera=true;
-			ccounter.fixedToCamera=true;
-			limage.fixedToCamera=true;
-			lcounter.fixedToCamera=true;
-			cursors = game.input.keyboard.createCursorKeys();
-			music=game.add.audio('maintheme');
-			music.loop=true;
-			music.play();
-			if(lives==3){
-			alert("Kill every goomba and get every coin and you win!");
-			}
-		}
-		function update() {
-			game.physics.arcade.collide(player, layer);
-			game.physics.arcade.collide(goombas, layer);
-			game.physics.arcade.overlap(player, goombas, goombaOverlap);
-			game.physics.arcade.collide(pyroguys, layer);
-			game.physics.arcade.overlap(player, pyroguys, pyroguyOverlap);
-			game.physics.arcade.overlap(player, coins, coinOverlap);
-			game.physics.arcade.collide(player,pipes,pipesOverlap);
-			game.physics.arcade.collide(pyroguys,pipes);
-			game.physics.arcade.collide(goombas,pipes);
-			if (player.body.enable) {
-				player.body.velocity.x = 0;
-				if (cursors.left.isDown) {
-					player.body.velocity.x = -90;
-					player.animations.play('walkLeft');
-					player.goesRight = false;
-				} else if (cursors.right.isDown) {
-					player.body.velocity.x = 90;
-					player.animations.play('walkRight');
-					player.goesRight = true;
-				} else {
-					player.animations.stop();
-					if (player.goesRight)
-						player.frame = 0;
-					else
-						player.frame = 9;
-				} 
-
-				if (cursors.up.isDown && player.body.onFloor()) {
-					jumps = game.add.audio('jump');
-		           	        jumps.play();
-					player.body.velocity.y = -190;
-					player.animations.stop();
-				}
-
-				if (player.body.velocity.y != 0) {
-					if (player.goesRight)
-						player.frame = 4;
-					else
-						player.frame = 13;
-				}
-			}
-		}
+		game.state.add('state1', state1);
+		game.state.add('splash',splash);
+		game.state.start('splash');
 
 		function pipesOverlap(player,pipes){
  		if (cursors.down.isDown && (player.body.onFloor())) {
  			player.body.enable=false;
  			player.animations.play('tp');
-			warps=game.add.audio('tps');
-			warps.play();
  			game.time.events.add(Phaser.Timer.SECOND*1.3 , function() {
  				player.body.enable=true;
  				player.reset(1720,170);
@@ -220,8 +73,7 @@ body {
     					cclear=game.add.audio('clearc');
     					cclear.play();
     					setTimeout(function(){
-    					alert("You have killed every enemy.You win!Wanna play again?")
-						location.reload();
+						game.state.start('splash');
 						 }, 4000);
     				}
 			coin.kill();
@@ -252,15 +104,25 @@ body {
 				lives-=1;
 				gokill=0;
 				ckill=0;
-    		    		game.state.start(game.state.current);
+    		    		game.state.start('splash');
     		   		 }, 4000);
     					} else {
 				setTimeout(function(){
-				alert("You have lost all your lives.Try again?");
 				location.reload();
 				}, 4000);}
 			}
 		}
+		function pyroguysDirection(pyroguys,layer){
+		if (pyroguys.body.position.x - pyroguys.body.prev.x <= 0){					
+			pyroguys.animations.play('walkRight');
+			}
+			else{
+			pyroguys.animations.play('walkLeft');
+			}
+		}
+	
+ 
+
 		function goombaOverlap(player, goomba) {		
 			if (player.body.touching.down) {
 				goomba.animations.stop();
@@ -291,12 +153,11 @@ body {
 					lives-=1;
 					gokill=0;
 					ckill=0;
-    		    		game.state.start(game.state.current);
+    		    		game.state.start('game.state.current');
     		   		 }, 4000);
     					} else {
 				setTimeout(function(){
-				alert("You have lost all your lives.Try again?");
-				location.reload();
+				game.state.start('splash');
 				}, 4000);}
 			}
 		}
