--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ body {
 		var deaths;
 		var score=0; 
 		var cclear;
+		var warps;
 
 		game.state.add('state1', state1);
 		game.state.add('splash',splash);
@@ -54,6 +55,8 @@ body {
  		if (cursors.down.isDown && (player.body.onFloor())) {
  			player.body.enable=false;
  			player.animations.play('tp');
+			warps=game.add.audio('tps');
+			warps.play();
  			game.time.events.add(Phaser.Timer.SECOND*1.3 , function() {
  				player.body.enable=true;
  				player.reset(1720,170);
