--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ body {
 	background-color: #000;
 }
 </style>
+<script src = "Menu.js"></script>
 <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
 </head>
 <body>
