--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ body {
 	<script type="text/javascript">
 		var game = new Phaser.Game(300, 250, Phaser.AUTO, '',this, false, false);
 		function preload(){
-			//this.load.baseURL = 'https://dionisiskon.github.io/Super-Mario/';
-			//this.load.crossOrigin = 'anonymous';
+			this.load.baseURL = 'https://dionisiskon.github.io/Super-Mario/';
+			this.load.crossOrigin = 'anonymous';
 		}
 		var music;
 		var scoreText;
