Adding variables for text

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ body {
 		var warps;
 		var wontext;
 		var won;
+		var gametext;
+		var tptext;
 
 		game.state.add('state1', state1);
 		game.state.add('splash',splash);
