Adding an extra counter for state's 2 flag overlap

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ body {
 		var tptext;
 		var finished=false;
 		var s=1;
+		var i=0;
 
 		game.state.add('state1', state1);
 		game.state.add('state2', state2);
